# noinlinedscript

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
src/noinlinedscript/: __main__.py  analysis.py  cli.py  config.py  models.py  reporting.py
src/noinlinedscript/parsers/: jenkinsfile.py  shellscript.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_config.py  test_jenkinsfile_parser.py  test_reporting.py  test_shellscript_parser.py
tests/fixtures/jenkinsfiles/: Jenkinsfile.clean  Jenkinsfile.concatenated  Jenkinsfile.nested_python  Jenkinsfile.script_call  Jenkinsfile.single_line  Jenkinsfile.triple_double_quote  Jenkinsfile.triple_single_quote
tests/fixtures/shellscripts/: no_inline.sh  python_dash_c.sh  python_heredoc.sh
