[project]
name = "noinlinedscript"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
noinlinedscript = "noinlinedscript.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
